blog alignment fix
adjusted padding, margins and flex settings to fix alignment issues

--- a/_final/main.css
+++ b/_final/main.css
@@ -69,8 +69,8 @@ img {
     padding: 30px;
   }
   header {
-    margin: -10px;
-    min-width: 375px;
+    /* margin: -10px;
+    min-width: 375px; */
   }
   .container {
     margin: 0px;
@@ -160,42 +160,55 @@ img {
     display: flex;
     flex-direction: row;
     margin: 10px;
+    padding-left: 20px;
     /* text-align: center; */
   }
-  .dog-img {
-    /* use this to put a frame around pics */
-    border-color: #443627;
-    border-width: 2px;
-    padding: 10px 30px 0 30px;
+  .dog-img-box {
+    /* margin: 0px 30px 0 30px; */
+    min-width: 180px;
+    height: 240px;
   }
-  .dog-img img {
-    width: 150px;
+  .dog-img-box img {
     border-radius: 8px;
     /* padding: 10px;
     border: 3px dotted #23395b; */
   }
-  .dog-info {
+  .dog-info-box {
     color: #443627;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    height: 240px;
+    margin-left: 30px;
   }
-  .dog-name {
+  .dog-name h2 {
+    color: #23395b;
     padding-left: 0;
     margin-left: 0;
+    margin-top: 0;
   }
   .dog-stats {
-    padding-left: 0px;
+    padding-left: 10px;
+    line-height: 1.5;
+  }
+  .dog-stats ul {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
   }
   .dog-stats p {
     padding: 10px;
   }
-  button {
+  .blog-btn button {
     background-color: #bb9457;
     color: #23395b;
     padding: 10px;
     font-size: 18px;
-    /* margin: 0 auto; */
+    margin: 0 auto;
     border-radius: 8px;
-    margin-top: 5px;
-    margin-left: -5px;
+    /* margin-top: 5px;
+    margin-left: -5px; */
   }
 }
 /* -----------------DONATE----------------- */
